--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "pnpm typecheck && pnpm lint:fix && pnpm prettier && pnpm build"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "latest",
